# Big

./: .env  app.py  check_models.py  env  requirements.txt
Big/: .gitignore  Makefile  README.md  pyproject.toml
Big/business_insights_generator/: __init__.py  dataset.py  features.py  plots.py
Big/business_insights_generator/modeling/: predict.py
Big/docs/: mkdocs.yml
Big/docs/docs/: index.md
Big/notebooks/: eda on customer reviews.ipynb  initial-eda.ipynb
business_insights_generator/: config.py  dataset.py  feature.py  plots.py
business_insights_generator/modeling/: train.py
