[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "business_insights_generator"
version = "0.0.1"
description = "AI powered Business Insights Generator."
authors = [
  { name = "yaya" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["business_insights_generator"]
include = ["pyproject.toml", "business_insights_generator/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["business_insights_generator"]
force-sort-within-sections = true

